--- a/.github/workflows/docs-pr.yml
+++ b/.github/workflows/docs-pr.yml
@@ -7,8 +7,8 @@ name: "Verify PR"
 on:
   pull_request:
     branches:
-    - "4.1-dev"
-    - "4.1"
+    - "dev"
+    - "5.0"
     - "main"
 
 jobs:
