--- a/preview.yml
+++ b/preview.yml
@@ -51,3 +51,5 @@ asciidoc:
     experimental: ''
     copyright: 2022
     common-license-page-uri: https://neo4j.com/docs/license/
+    page-add-notes-module: ROOT
+    page-add-notes-tags: update
