--- a/modules/ROOT/examples/docker-data/docker-compose.yml
+++ b/modules/ROOT/examples/docker-data/docker-compose.yml
@@ -11,9 +11,7 @@ services:
     environment:
       NEO4J_AUTH: neo4j/password
       NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
-      NEO4J_server_memory_heap_initial__size: "3500m"
-      NEO4J_server_memory_heap_max__size: "3500m"
-      NEO4J_server_memory_pagecache_size: "1900m"
+      NEO4J_server_memory_heap_max__size: "4G"
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.0
