--- a/modules/ROOT/examples/docker-data/docker-compose.yml
+++ b/modules/ROOT/examples/docker-data/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - "7687:7687"
     environment:
       NEO4J_AUTH: neo4j/password
-      NEO4J_dbms_memory_heap_max__size: 8G
       NEO4J_ACCEPT_LICENSE_AGREEMENT: "yes"
+      NEO4J_server_memory_heap_max__size: "4G"
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.0
