--- a/antora.yml
+++ b/antora.yml
@@ -24,5 +24,5 @@ asciidoc:
     url-confluent-java-client: https://docs.confluent.io/clients-kafka-java/current/overview.html
     url-confluent-hub-neo4j: https://www.confluent.io/hub/neo4j/kafka-connect-neo4j
     url-confluent-hub-datagen: https://www.confluent.io/hub/confluentinc/kafka-connect-datagen
-    url-github-releases: https://github.com/neo4j-contrib/neo4j-streams/releases
+    url-github: https://github.com/neo4j/neo4j-kafka-connector
     page-canonical-root: /docs
