--- a/antora.yml
+++ b/antora.yml
@@ -10,8 +10,7 @@ asciidoc:
     theme: docs
     copyright: Neo4j Inc.
     page-product: Neo4j Connector for Kafka
-    connector-version: '5.2'
-    exact-connector-version: '5.2.0-SNAPSHOT'
+    exact-connector-version: '5.1.0-alpha01'
     page-pagination: true
     product-name: Neo4j Connector for Kafka
     url-common-license-page: https://neo4j.com/docs/license/
