--- a/preview.yml
+++ b/preview.yml
@@ -52,4 +52,4 @@ asciidoc:
     copyright: 2023
     common-license-page-uri: https://neo4j.com/docs/license/
     page-add-notes-module: ROOT
-    page-add-notes-tags: update
+    page-add-notes-tags: note
