--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
   "devDependencies": {
     "express": "^4.18.2",
     "nodemon": "^3.0.2"
+  },
+  "overrides": {
+    "@antora/site-generator-default": {
+      "glob-parent": "6.0.2"
+    }
   }
 }
