--- a/preview.yml
+++ b/preview.yml
@@ -51,5 +51,6 @@ asciidoc:
     experimental: ''
     copyright: 2023
     common-license-page-uri: https://neo4j.com/docs/license/
+    cypher-manual-page-uri: https://neo4j.com/docs/cypher-manual/current
     page-add-notes-module: ROOT
     page-add-notes-tags: note
