--- a/publish.yml
+++ b/publish.yml
@@ -52,3 +52,4 @@ asciidoc:
     experimental: ''
     copyright: 2023
     common-license-page-uri: https://neo4j.com/docs/license/
+    cypher-manual-page-uri: https://neo4j.com/docs/cypher-manual/current
