--- a/.github/workflows/docs-teardown.yml
+++ b/.github/workflows/docs-teardown.yml
@@ -1,12 +1,11 @@
-# This is an example of the docs-teardown.yml workflow available from the recrwplay org
+#  copy this workflow into your repo
 name: "Documentation Teardown"
 
 on:
   pull_request_target:
     branches:
-    - "dev"
-    - "5.0"
-    - "main"
+      - main
+      - dev
     types:
       - closed
 
@@ -15,11 +14,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
           node-version: lts/*
+
+      - id: get-deploy-url
+        env:
+          ORG: ${{ github.event.repository.owner.login }}
+          REPO: ${{ github.event.repository.name }}
+          DEPLOYID: ${{ github.event.pull_request.number }}
+        run: |
+          deployurl=$ORG-$REPO-$DEPLOYID.surge.sh
+          echo "deploy-url=$deployurl" >> $GITHUB_OUTPUT
+
       - name: Teardown documentation
+        shell: bash
+        env:
+          SURGE_TOKEN: "${{ secrets.DOCS_SURGE_TOKEN }}"
+          DEPLOY_URL: ${{ steps.get-deploy-url.outputs.deploy-url }}
         run: |
           npm install -g surge
-          surge teardown ${{ github.event.repository.owner.login}}-${{ github.event.repository.name}}-${{ github.event.pull_request.number }}.surge.sh --token ${{ secrets.SURGE_TOKEN }}
-          
+          surge teardown $DEPLOY_URL --token "$SURGE_TOKEN"
+
+      - name: Comment on PR
+        uses: marocchino/sticky-pull-request-comment@331f8f5b4215f0445d3c07b4967662a32a2d3e31 #v2.9.0
+        with:
+          number: ${{ github.event.pull_request.number }}
+          header: docs-pr-changes
+          message: |
+            Thanks for the documentation updates.
+
+            The preview documentation has now been torn down - reopening this PR will republish it.
+          GITHUB_TOKEN: ${{ secrets.DOCS_PR_COMMENT_TOKEN }}
