--- a/antora.yml
+++ b/antora.yml
@@ -18,7 +18,8 @@ asciidoc:
     url-confluent-blog: https://www.confluent.io/blog
     url-confluent-download: https://www.confluent.io/get-started/
     url-confluent-kafka: https://docs.confluent.io/current/kafka
-    url-confluent-cloud: https://docs.confluent.io/current/cloud
+    url-confluent-cloud: https://confluent.cloud
+    url-confluent-cloud-docs: https://docs.confluent.io/current/cloud
     url-confluent-install: https://docs.confluent.io/current/installation
     url-confluent-quickstart: https://docs.confluent.io/platform/current/quickstart
     url-confluent-clients: https://docs.confluent.io/platform/current/clients
