--- a/antora.yml
+++ b/antora.yml
@@ -11,6 +11,7 @@ asciidoc:
     copyright: Neo4j Inc.
     page-product: Neo4j Connector for Kafka
     kafka-connect-version: 3.0
+    connector-version: '5.1'
     exact-connector-version: '5.1.0-rc01'
     page-pagination: true
     product-name: Neo4j Connector for Kafka
