--- a/publish.yml
+++ b/publish.yml
@@ -7,7 +7,7 @@ site:
 content:
   sources:
   - url: ./
-    branches: ['4.1-dev', '4.1', '4.0']
+    branches: ['5.0', 'HEAD']
     exclude:
     - '!**/_includes/*'
     - '!**/readme.adoc'
@@ -25,7 +25,7 @@ urls:
 antora:
   extensions:
   - require: "@neo4j-antora/antora-modify-sitemaps"
-    sitemap_version: '4.1-dev'
+    sitemap_version: '5.1-preview'
     sitemap_loc_version: 'current'
     move_sitemaps_to_components: true
 
@@ -50,5 +50,5 @@ asciidoc:
     includePDF: false
     nonhtmloutput: ""
     experimental: ''
-    copyright: 2023
+    copyright: 2024
     common-license-page-uri: https://neo4j.com/docs/license/
