Fix doc version name

--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
 name: kafka
-version: 5.1-preview
-title: Neo4j Kafka Integration Docs
+version: '5.1-preview'
+title: Neo4j Connector for Kafka
 start_page: ROOT:index.adoc
 nav:
   - modules/ROOT/content-nav.adoc
