--- a/publish.yml
+++ b/publish.yml
@@ -53,3 +53,5 @@ asciidoc:
     copyright: 2024
     common-license-page-uri: https://neo4j.com/docs/license/
     cypher-manual-page-uri: https://neo4j.com/docs/cypher-manual/current
+    page-add-notes-module: ROOT
+    page-add-notes-tags: note
