--- a/antora.yml
+++ b/antora.yml
@@ -10,7 +10,8 @@ asciidoc:
     theme: docs
     copyright: Neo4j Inc.
     page-product: Neo4j Connector for Kafka
-    kafka-connect-version: 3.0
+    confluent-connect-version: '7.4'
+    kafka-connect-version: '3.4.1'
     connector-version: '5.1'
     exact-connector-version: '5.1.19'
     page-pagination: true
