--- a/antora.yml
+++ b/antora.yml
@@ -10,8 +10,10 @@ asciidoc:
     theme: docs
     copyright: Neo4j Inc.
     page-product: Neo4j Connector for Kafka
+    confluence-connect-version: '7.4'
     connector-version: '5.1'
     exact-connector-version: '5.1.19'
+    kafka-connect-version: '3.4.1'
     page-pagination: true
     product-name: Neo4j Connector for Kafka
     url-common-license-page: https://neo4j.com/docs/license/
