Add 5.1 branch to publish

--- a/publish.yml
+++ b/publish.yml
@@ -7,7 +7,7 @@ site:
 content:
   sources:
   - url: ./
-    branches: ['5.0', 'HEAD']
+    branches: ['5.0', '5.1', 'HEAD']
     exclude:
     - '!**/_includes/*'
     - '!**/readme.adoc'
