--- a/publish.yml
+++ b/publish.yml
@@ -7,7 +7,7 @@ site:
 content:
   sources:
   - url: ./
-    branches: ['5.0', 'HEAD']
+    branches: ['5.0', '5.1', 'HEAD']
     exclude:
     - '!**/_includes/*'
     - '!**/readme.adoc'
@@ -21,13 +21,6 @@ ui:
 
 urls:
   html_extension_style: indexify
-
-antora:
-  extensions:
-  - require: "@neo4j-antora/antora-modify-sitemaps"
-    sitemap_version: '5.1'
-    sitemap_loc_version: 'current'
-    move_sitemaps_to_components: true
 
 asciidoc:
   extensions:
